--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style>
+	// inline css
+	
         .spn {
             font-weight: bold;
             text-transform: capitalize;
